v2.2.7 (work in progress)
      * ...

v2.2.6 2026-01-06
      * Increase test timeout threshold by a factor of two, to avoid timeouts in
        github Windows CI tests.
      * Reduce interim disk usage when calling mcpl_merge_outfiles_mpi by
        removing per-thread files before attempting output file compression
        (GitHub issue #119).
      * Bump end-year in copyright statements to 2026.

v2.2.4 2025-10-20
      * Maintenance release to rerender various deployments.

v2.2.2 2025-05-22
      * Minor fixes to ensure consistent error checking in
        mcpl_merge_outfiles_mpi also for nproc=1 or nproc>65535.
      * Fix MSCV compilation warning related to memchr usage.

v2.2.0 2025-05-22
      * Add mcpl_create_outfile_mpi and mcpl_merge_outfiles_mpi utility C
        functions, to handle some of the tedium needed for applications creating
        multiple MCPL files from a number of MPI processes before finally
        merging to a single file.
      * Add mcpl_name_helper utility C function for easily parsing user input
        strings into absolute or relative path names to a corresponding MCPL
        file, with or without a .mcpl or .mcpl.gz suffix.

v2.1.0 2025-05-17
      * This release brings an often-requested feature to MCPL: Statistics in
        the header which are automatically combined when files are merged! The
        support does not require an update of the on-disk MCPL format, but is
        handled as a convention for encoding the parameters as key-value pairs
        in comment fields in the MCPL headers, using a syntax like
        "stat:sum:<key>:<value>". The various APIs (C/Python/cmdline) have been
        updated to provide interfaces for interacting with these data items, and
        all supported operations (merge/repair/extract/...) have been updated to
        handle such entries appropriately. For a more complete introduction of
        the new feature, please refer to the documentation at the